[project]
name = "dearpygui-grid"
version = "1.0.1"
description = "Layout manager for Dear PyGui."
authors = [{name="Anthony Doupe",email="atlamillias@outlook.com"}]
keywords = []
urls = {Homepage="https://github.com/Atlamillias/DearPyGui-Grid"}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",

    "Operating System :: Microsoft :: Windows :: Windows 8.1",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Unix",

    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10"
dependencies = [
    "dearpygui >= 1.9.0",
    "typing-extensions; python_version < '3.12'",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


